:lady_beetle: [FIX]: Ajustando o Logout
