# backend/src/resources/auth/auth.router.ts
@@ -4,6 +4,7 @@ import authController from "./auth.controller";
 
 const router = Router();
 
+router.get("/user", authController.getUser);
 router.post("/signup", authController.signup);
 router.put("/login", authController.login);
 router.delete("/logout", isAuth, authController.logout);
